Revision history for Perl extension DTL::Fast.

1.611 - in development
    - stringformat now treats undef values as empty strings
    - fixed bug with crashing on error messging with "undef in sprintf" error, fixes #57
    - logical operators now behaves properly. Second operand evaluated only if first is not enough, fixes #25
    - upper and lower filters treats undef as an empty string

1.609 - Wed 11 Feb 2015 21:38 MSK
    - Dynamic filters loading implemented, fixes #16
    - Dynamic operators loading implemented, fixes #19
    - Custom operators introduced
    - Documented some additional filters 
    - Fixed bug with locale-specific string operations: cmp, lt, gt, upper, lower, capfirst, dictsort

1.608 - Tue 10 Feb 2015 19:09 MSK
    - Removed unsafe map usage in complicated loops
    - Fixed bug with spaceless closing tags `endcomment` and `endverbatim`

1.606 - Mon 09 Feb 2015 16:23 MSK
    - SSI tag behavior now is like in Django, fixes #26
    - ifchanged tag is now rendered on the first pass
    - ifchanged tag can now work without parameters (watching rendered content); not recommended, bad performance
    - new tag - warn
    - fixed bug with slicing indexes outside the array boundaries
    - implemented dynamic tags loading and preloading registering with register_tag, fixes #18
    - replaced some redundant methods with direct perl API calls
    - documented numberformat filter, fixes #10

1.605 - Wed 28 Jan 2015 18:27 MSK
    - Fixed spaces between equals in 'with' tag. Now tags may be multiline, fixes #7
    - Fixed filters behavior in with tag, if constant strings being used in assignment, fixes #8
    - Blocks now can be multi-line

1.604 - Tue 27 Jan 2015 20:18 MSK
    - Fixed bug when expression fails if variable name contains operator
    - Load tag is now accepts package names with or without quotes

1.602 - Sun 25 Jan 2015 20:18 MSK
    - Implemented and tested include .. with tag

1.05.6 - 2015-01-22