@@ -5,6 +5,7 @@ Revision history for Perl extension DTL::Fast.
     - fixed bug with crashing on error messging with "undef in sprintf" error, fixes #57
     - logical operators now behaves properly. Second operand evaluated only if first is not enough, fixes #25
     - upper and lower filters treats undef as an empty string
+    - implemented split filter (experimental)
 
 1.609 - Wed 11 Feb 2015 21:38 MSK
     - Dynamic filters loading implemented, fixes #16
